syntax = "proto3";
package rusk;
option go_package = "github.com/dusk-network/rusk-schema;rusk";

message EchoRequest {
   string message = 1;
}

message EchoResponse {
    string message = 1;
}
