syntax = "proto3";
package rusk;
option go_package = "github.com/dusk-network/rusk-schema;rusk";

import "stake.proto";

message Provisioner {
    bytes public_key_bls = 1;
    bytes raw_public_key_bls = 2;
    repeated Stake stakes = 3;
}
